--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-altair==5.5.0
+altair==4.2.2
 attrs==25.3.0
 blinker==1.9.0
 cachetools==5.5.2
@@ -6,6 +6,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+entrypoints==0.4
 et-xmlfile==2.0.0
 gitdb==4.0.12
 GitPython==3.1.44
@@ -25,6 +26,7 @@ protobuf==5.29.4
 pyarrow==19.0.1
 pydeck==0.9.1
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 pytz==2025.1
 referencing==0.36.2
 requests==2.32.3
@@ -32,8 +34,10 @@ rpds-py==0.23.1
 six==1.17.0
 smmap==5.0.2
 streamlit==1.43.2
+streamlit-aggrid==1.0.5
 tenacity==9.0.0
 toml==0.10.2
+toolz==1.0.0
 tornado==6.4.2
 typing-extensions==4.12.2
 tzdata==2025.2
